openshift/jvm/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: component-upgrade-logger-jvm
  labels:
    app: component-upgrade-logger
  annotations: {}
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: component-upgrade-logger-jvm
  template:
    metadata:
      labels:
        deployment: component-upgrade-logger-jvm
    spec:
      containers:
        - name: component-upgrade-logger
          image: images.paas.redhat.com/thofman/component-upgrade-logger:jvm-1.0.0-SNAPSHOT
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8443
              protocol: TCP
          resources:
            limits:
              cpu: 100m
              memory: 150Mi
            requests:
              cpu: 50m
              memory: 100Mi
          livenessProbe:
            httpGet:
              path: /q/health/live
              port: 8080
            initialDelaySeconds: 10
          readinessProbe:
            httpGet:
              path: /q/health/ready
              port: 8080
            initialDelaySeconds: 10
            timeoutSeconds: 3
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
