openshift/jvm/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: component-upgrade-logger-jvm
  labels:
    app: component-upgrade-logger-jvm
spec:
  to:
    kind: Service
    name: component-upgrade-logger-jvm
    weight: 100
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
